<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"
    tools:context=".MainActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewMain2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/logoutbtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/vdhgv54ndnj21"
        android:onClick="logout"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/adViewMain2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/back"
        android:onClick="openProfileActivity"
        android:text="@string/profile"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/applyBtn"
        app:layout_constraintTop_toBottomOf="@+id/applyBtn" />

    <Button
        android:id="@+id/applyBtn"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/back"
        android:text="@string/apply_for_a_loan"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/lendbtn"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/back"
        android:onClick="lendMoney"
        android:text="@string/lend_money"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/applyBtn"
        app:layout_constraintTop_toTopOf="@+id/applyBtn" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="@drawable/back"
        android:onClick="OpenBlog"
        android:text="@string/about_us"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/lendbtn"
        app:layout_constraintTop_toTopOf="@+id/profile_btn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="153dp"
        android:gravity="center"
        android:text="@string/welcome_to_the_dashboard"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adViewMain1" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewMain1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/toolbar1"
        layout="@layout/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>